--- a/platformio.ini
+++ b/platformio.ini
@@ -34,10 +34,10 @@ build_flags =
     -Wl,-T./arch/avr/avrtos-avr6.xn   
 
 ; /dev/ttyACM0
-upload_port = /dev/ttyACM2
+upload_port = /dev/ttyACM0
 
 ; /dev/ttyACM0
-monitor_port = /dev/ttyACM2
+monitor_port = /dev/ttyACM0
 monitor_speed = 500000
 
 build_type = debug
@@ -864,6 +864,10 @@ build_flags =
 
 
 [env:Arduino]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+
 build_src_filter =
     ${env.build_src_filter}
     +<examples/arduino>
