Started to pack to an Arduino library (keywords)
- Add dedicated configuration file for Arduino IDE (guessed)
- Move "arch/avr" to "architecture/avr" directory

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,8 +30,8 @@ build_src_filter =
     +<avrtos/>
 
 build_flags = 
-;     -Wl,-T./arch/avr/avrtos-avr5-atmega328p.xn
-    -Wl,-T./arch/avr/avrtos-avr6.xn   
+;     -Wl,-T./architecture/avr/avrtos-avr5-atmega328p.xn
+    -Wl,-T./architecture/avr/avrtos-avr6.xn   
 
 ; /dev/ttyACM0
 upload_port = /dev/ttyACM0
