Filter valid cmake examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,15 +1,17 @@
 # In cmake : add all subdirectory
-set(curdir ${CMAKE_CURRENT_LIST_DIR})
+set(examples_dir ${CMAKE_CURRENT_LIST_DIR})
 
-file(GLOB children RELATIVE ${curdir} ${curdir}/*)
+file(GLOB samples RELATIVE ${examples_dir} ${examples_dir}/*)
 
-foreach(child ${children})
-	if(IS_DIRECTORY ${curdir}/${child} )
+foreach(example ${samples})
+	if(IS_DIRECTORY ${examples_dir}/${example} )
 		# Allow to build only a single sample to not lost VS Code Intellisense with defines
 		# in kernel code
-		if (NOT DEFINED ENABLE_SINGLE_SAMPLE OR ENABLE_SINGLE_SAMPLE STREQUAL child)
-			message(${curdir}/${child})
-			add_subdirectory(${curdir}/${child})
+		if (NOT DEFINED ENABLE_SINGLE_SAMPLE OR ENABLE_SINGLE_SAMPLE STREQUAL example)
+			if(EXISTS "${examples_dir}/${example}/CMakeLists.txt")
+				message(${examples_dir}/${example})
+				add_subdirectory(${examples_dir}/${example})
+			endif()
 		endif()
 	endif()
 endforeach()
