Improve automatic generation of PIO configurations from cmake/arduino examples Remove legacy python scripts Add a guard to prevent use of the library with non AVR architectures

--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,12 @@
-name=AVRTOS
-version=1.0
+name=avrtos
+version=1.0.0
 author=Lucas Dietrich
 maintainer=Lucas Dietrich
-sentence=RTOS for AVR Arduino microcontrollers
-paragraph=RTOS attempt for Arduino AVR 8bits microcontrollers. It supports multithreading (cooperative/preemptive), round-robin scheduler (no priority), mutexes, semaphores, events, timers, flags, workqueues, fifo and drivers for GPIO, UART and EXTI/PCI interrupts. Highly configurable. Tested on ATmega328P (Arduino UNO/PRO) and ATmega2560 (Arduino MEGA).
-category=Other
+sentence=RTOS for AVR Arduino microcontrollers (Uno Mega)
+paragraph=AVR_RTOS is a real-time operating system designed for 8-bit AVR-based Arduino microcontrollers. The library supports multithreading (cooperative and preemptive), a round-robin scheduler (no priority), mutexes, semaphores, events, timers, flags, workqueues, FIFO queues, and drivers for GPIO, UART, and EXTI/PCI interrupts. It is highly configurable and has been tested on ATmega328P (Arduino UNO/PRO) and ATmega2560 (Arduino MEGA) platforms. The API style is similar to that of the Zephyr RTOS.
+category=Timing
 dot_a_linkage=false
 url=https://github.com/lucasdietrich/AVRTOS
 architectures=avr
-includes=avrtos/avrtos.h
+license=Apache-2.0
+includes=avrtos.h
