Final changes before release 1.0.0
- Fix piogen.py and regenerate platform.ini
- Introduce an inline API for gpio drivers named "gpiol".
- Add sample to be used with a button
- Introduce CONFIG_KERNEL_SILENT_FAULTS
- Introduce __fault_hook for debug purposes
- Add samples for Arduino
- Introduce function serial_init_baud()
- Introduce led_get()
- Introduce k_thread_set_priority()
- Introduce CONFIG_SERIAL_USART_BAUDRATE
- Add script to automatically generate Arduino samples for PIO ones
- Add philosopher example for arduino
- Add guards to prevent user to call k_yield_* from k_event or k_timer handlers.
- Add CONFIG_KERNEL_SYSCLOCK_PERIOD_US and CONFIG_KERNEL_TIME_SLICE_US to arduino configuration
- Add support for GPIO debug of kernel
- Introduce new asserts
- Shorten assertion failed message
- Update readme.md
- Remove .editorconfig
- Improve Makefile
- Add requirements.txt
- Remove old arduino sample

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
 	},
 	"files.associations": {
 		"*.asm": "avr",
+		"*.bb": "shellscript",
+		"*.bbclass": "shellscript",
+		"*.inc": "shellscript",
 		"multithreading_debug.h": "c",
 		"serial.h": "c",
 		"multithreading.h": "c",
@@ -55,7 +58,8 @@
 		"logging.h": "c",
 		"iom2560.h": "c",
 		"iomxx0_1.h": "c",
-		"typeinfo": "c"
+		"typeinfo": "c",
+		"exti.h": "c"
 	},
 	"editor.rulers": [80]
 }
