--- a/examples/footprint/CMakeLists.txt
+++ b/examples/footprint/CMakeLists.txt
@@ -17,6 +17,8 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	
 	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	CONFIG_KERNEL_TIME_SLICE_US=1000
+
+	CONFIG_KERNEL_SILENT_FAULTS=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
