--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,9 @@
 {
-    // See http://go.microsoft.com/fwlink/?LinkId=827846
-    // for the documentation about the extensions.json format
     "recommendations": [
-        "ms-vscode.cmake-tools",
+        "twxs.cmake",
         "rockcat.avr-support",
 	    "mitaki28.vscode-clang",
-	    "ms-vscode.cpptools-extension-pack",
-    ],
-    "unwantedRecommendations": [
+	    "ms-vscode.cpptools",
         "platformio.platformio-ide",
-    ]
+    ],
 }
