--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = MinimalExample
+; comment followinng line and select default profile to build
+; all samples at once
+default_envs = ArduinoPIOEasy
 
 src_dir = .
 include_dir = src
@@ -67,13 +69,160 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
-	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
 	-DCONFIG_KERNEL_DELAY_OBJECT_U32=1
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=96
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_THREAD_STACK_SENTINEL=0
 	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_ARGS_CHECKS=0
+	-DCONFIG_SERIAL_USART_BAUDRATE=9600lu
+	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000lu
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000lu
+
+monitor_speed = 9600
+
+[env:ArduinoPIODiningPhilisophers]
+platform = atmelavr
+framework = arduino
+
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/ArduinoPIODiningPhilisophers>
+
+build_flags =
+	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
+	-DCONFIG_KERNEL_AUTO_INIT=0
+	-DCONFIG_KERNEL_TIMERS=1
+	-DCONFIG_KERNEL_EVENTS=1
+	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
+	-DCONFIG_KERNEL_ATOMIC_API=1
+	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
+	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
+	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
+	-DCONFIG_KERNEL_DELAY_OBJECT_U32=1
+	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=96
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_THREAD_STACK_SENTINEL=0
+	-DCONFIG_KERNEL_ASSERT=0
+	-DCONFIG_KERNEL_ARGS_CHECKS=0
+	-DCONFIG_SERIAL_USART_BAUDRATE=9600lu
+	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000lu
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000lu
+
+monitor_speed = 9600
+
+[env:ArduinoPIODrivers]
+platform = atmelavr
+framework = arduino
+
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/ArduinoPIODrivers>
+
+build_flags =
+	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
+	-DCONFIG_KERNEL_AUTO_INIT=0
+	-DCONFIG_KERNEL_TIMERS=1
+	-DCONFIG_KERNEL_EVENTS=1
+	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
+	-DCONFIG_KERNEL_ATOMIC_API=1
+	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
+	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
+	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
+	-DCONFIG_KERNEL_DELAY_OBJECT_U32=1
+	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=96
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_THREAD_STACK_SENTINEL=0
+	-DCONFIG_KERNEL_ASSERT=0
+	-DCONFIG_KERNEL_ARGS_CHECKS=0
+	-DCONFIG_SERIAL_USART_BAUDRATE=9600lu
+	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000lu
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000lu
+
+monitor_speed = 9600
+
+[env:ArduinoPIOEasy]
+platform = atmelavr
+framework = arduino
+
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/ArduinoPIOEasy>
+
+build_flags =
+	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
+	-DCONFIG_KERNEL_AUTO_INIT=0
+	-DCONFIG_KERNEL_TIMERS=1
+	-DCONFIG_KERNEL_EVENTS=1
+	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
+	-DCONFIG_KERNEL_ATOMIC_API=1
+	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
+	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
+	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
+	-DCONFIG_KERNEL_DELAY_OBJECT_U32=1
+	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=96
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_THREAD_STACK_SENTINEL=0
+	-DCONFIG_KERNEL_ASSERT=0
+	-DCONFIG_KERNEL_ARGS_CHECKS=0
+	-DCONFIG_SERIAL_USART_BAUDRATE=9600lu
+	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000lu
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000lu
+
+monitor_speed = 9600
+
+[env:ArduinoPIOShell]
+platform = atmelavr
+framework = arduino
+
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/ArduinoPIOShell>
+
+build_flags =
+	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
+	-DCONFIG_KERNEL_AUTO_INIT=0
+	-DCONFIG_KERNEL_TIMERS=1
+	-DCONFIG_KERNEL_EVENTS=1
+	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
+	-DCONFIG_KERNEL_ATOMIC_API=1
+	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
+	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
+	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
+	-DCONFIG_KERNEL_DELAY_OBJECT_U32=1
+	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=96
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_THREAD_STACK_SENTINEL=0
+	-DCONFIG_KERNEL_ASSERT=0
+	-DCONFIG_KERNEL_ARGS_CHECKS=0
+	-DCONFIG_SERIAL_USART_BAUDRATE=9600lu
+	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000lu
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000lu
+
+monitor_speed = 9600
 
 [env:Atomic]
 build_src_filter =
@@ -146,6 +295,17 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=0
 	-DCONFIG_KERNEL_THREAD_IDLE=0
+
+[env:DemoButton]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/demo-button>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_KERNEL_SILENT_FAULTS=1
 
 [env:DrvApiTimers]
 build_src_filter =
@@ -315,6 +475,18 @@ build_flags =
 	-DCONFIG_THREAD_STACK_SENTINEL=1
 	-DCONFIG_KERNEL_API_NOINLINE=1
 
+[env:FaultHook]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/fault_hook>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_KERNEL_SILENT_FAULTS=0
+	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=-1
+
 [env:Fifo]
 build_src_filter =
     ${env.build_src_filter}
@@ -373,6 +545,7 @@ build_flags =
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
+	-DCONFIG_KERNEL_SILENT_FAULTS=1
 
 [env:Idle]
 build_src_filter =
@@ -878,4 +1051,3 @@ build_flags =
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
 	-DCONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
 	-DCONFIG_DRIVERS_USART1_ASYNC=1
-DRIVERS_USART1_ASYNC=1
