--- a/platformio.ini
+++ b/platformio.ini
@@ -20,8 +20,8 @@ include_dir = src
 
 [env]
 platform = atmelavr
-board = megaatmega2560
-; board = megaatmega2560, pro16MHzatmega328, ...
+board = ethernet
+; board = megaatmega2560, pro16MHzatmega328, ethernet, ...
 
 ; Build options debug/release
 ; build_type = debug
@@ -30,11 +30,11 @@ build_src_filter =
     +<src/avrtos/>
 
 build_flags = 
-;     -Wl,-T./architecture/avr/avrtos-avr5-atmega328p.xn
-    -Wl,-T./architecture/avr/avrtos-avr6.xn   
+    -Wl,-T./architecture/avr/avrtos-avr5.xn
+    ; -Wl,-T./architecture/avr/avrtos-avr6.xn   
 
-upload_port = /dev/ttyACM0
-monitor_port = /dev/ttyACM0
+upload_port = /dev/ttyACM1
+monitor_port = /dev/ttyACM1
 monitor_speed = 500000
 monitor_flags = 
 	--echo
@@ -341,6 +341,62 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+[env:DrvSpiMaster]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/drv-spi-master>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_KERNEL_TIME=1
+	-DCONFIG_SPI=1
+	-DCONFIG_KERNEL_DEBUG_GPIO=0
+
+[env:DrvSpiMasterLib]
+framework = arduino
+
+lib_deps =
+	SPI
+
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/drv-spi-master-lib>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_KERNEL_TIME=1
+	-DCONFIG_SPI=1
+	-DCONFIG_KERNEL_DEBUG_GPIO=0
+
+[env:DrvSpiSlave]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/drv-spi-slave>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_KERNEL_TIME=1
+	-DCONFIG_SPI=1
+	-DCONFIG_KERNEL_DEBUG_GPIO=0
 
 [env:DrvTimers]
 build_src_filter =
