--- a/platformio.ini
+++ b/platformio.ini
@@ -377,6 +377,22 @@ build_flags =
 	-DCONFIG_SPI_ASYNC=1
 	-DCONFIG_KERNEL_DEBUG_GPIO=4
 
+[env:DrvTimer]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/drv-timer>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
+	-DCONFIG_INTERRUPT_POLICY=1
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
+	-DCONFIG_KERNEL_DELAY_OBJECT_U32=1
+
 [env:DrvTimers]
 build_src_filter =
     ${env.build_src_filter}
