Fix build for all toolchains
- Introduce macros FEATURE_TIMER_COUNT and FEATURE_USART_COUNT to
know if an example can be built for a given toolchain
- Apply clang-format
- Recalculate example sizes

--- a/examples/drv-timers-pwm-icrn/CMakeLists.txt
+++ b/examples/drv-timers-pwm-icrn/CMakeLists.txt
@@ -1,4 +1,4 @@
-if (NOT QEMU)
+if (NOT QEMU AND ${FEATURE_TIMER_COUNT} GREATER 3)
 
 	project(sample_drv_timers_pwm_ircn)
 	add_executable(${PROJECT_NAME} main.c)
