--- a/examples/isr-unpend/CMakeLists.txt
+++ b/examples/isr-unpend/CMakeLists.txt
@@ -1,4 +1,4 @@
-if (NOT QEMU)
+if (${FEATURE_TIMER_COUNT} GREATER 3)
 
 	project(sample_isr_unpend)
 	add_executable(${PROJECT_NAME} main.c)
@@ -11,6 +11,7 @@ if (NOT QEMU)
 		CONFIG_INTERRUPT_POLICY=1
 		CONFIG_KERNEL_SYSCLOCK_PERIOD_US=400000
 		CONFIG_KERNEL_TIME_SLICE_US=400000
+		CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 
 		CONFIG_THREAD_CANARIES=1
 		CONFIG_KERNEL_SYSTICK_GPIOB_DEBUG=0x40
