--- a/platformio.ini
+++ b/platformio.ini
@@ -640,6 +640,7 @@ build_flags =
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=400000
 	-DCONFIG_KERNEL_TIME_SLICE_US=400000
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_KERNEL_SYSTICK_GPIOB_DEBUG=0x40
 
