--- a/examples/drv-timer/CMakeLists.txt
+++ b/examples/drv-timer/CMakeLists.txt
@@ -4,21 +4,25 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-project(sample_drv_timer)
-add_executable(${PROJECT_NAME} main.c)
+if (${FEATURE_TIMER_COUNT} GREATER 3)
 
-# AVRTOS Configuration
-target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_UPTIME=1
-	CONFIG_THREAD_EXPLICIT_MAIN_STACK=0
-	CONFIG_INTERRUPT_POLICY=1
-	CONFIG_STDIO_PRINTF_TO_USART=0
-	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
-	CONFIG_KERNEL_DELAY_OBJECT_U32=1
-)
+	project(sample_drv_timer)
+	add_executable(${PROJECT_NAME} main.c)
 
-target_link_avrtos(${PROJECT_NAME})
+	# AVRTOS Configuration
+	target_compile_definitions(${PROJECT_NAME} PUBLIC
+		CONFIG_KERNEL_UPTIME=1
+		CONFIG_THREAD_EXPLICIT_MAIN_STACK=0
+		CONFIG_INTERRUPT_POLICY=1
+		CONFIG_STDIO_PRINTF_TO_USART=0
+		CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+		CONFIG_KERNEL_TIME_SLICE_US=1000
+		CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
+		CONFIG_KERNEL_DELAY_OBJECT_U32=1
+	)
 
-target_prepare_env(${PROJECT_NAME})
+	target_link_avrtos(${PROJECT_NAME})
+
+	target_prepare_env(${PROJECT_NAME})
+
+endif()
