Add example for MCP3008 SPI driver
* Improve SPI driver init function

--- a/platformio.ini
+++ b/platformio.ini
@@ -360,6 +360,21 @@ build_flags =
 	-DCONFIG_KERNEL_DEBUG_GPIO=5
 	-DCONFIG_KERNEL_DEBUG_GPIO_SYSTICK=1
 
+[env:DrvSpiMcp3008]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/drv-spi-mcp3008>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_THREAD_CANARIES=1
+
 [env:DrvSpiSlave]
 build_src_filter =
     ${env.build_src_filter}
