Add draft implementation for delayable work items
* Add a corresponding sample

--- a/platformio.ini
+++ b/platformio.ini
@@ -1095,6 +1095,19 @@ build_flags =
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 
+[env:WorkqDelayable]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/workq-delayable>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000
+	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_SYSTEM_WORKQUEUE_DELAYABLE=1
+	-DCONFIG_KERNEL_EVENTS=1
+
 [env:Workqueue]
 build_src_filter =
     ${env.build_src_filter}
