--- a/examples/drv-i2c-tcn75/CMakeLists.txt
+++ b/examples/drv-i2c-tcn75/CMakeLists.txt
@@ -1,6 +1,6 @@
 if (NOT QEMU AND ${FEATURE_USART_COUNT} GREATER 1)
 
-	project(sample_drv_i2c_ctrl)
+	project(sample_drv_i2c_tcn75)
 	add_executable(${PROJECT_NAME} main.c)
 
 	# AVRTOS Configuration
@@ -9,10 +9,10 @@ if (NOT QEMU AND ${FEATURE_USART_COUNT} GREATER 1)
 		CONFIG_THREAD_CANARIES=1
 		CONFIG_KERNEL_DEBUG=0
 		CONFIG_KERNEL_SCHEDULER_DEBUG=0
-		CONFIG_KERNEL_ASSERT=1
+		CONFIG_KERNEL_ASSERT=0
 		CONFIG_STDIO_PRINTF_TO_USART=0
 		CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
-		CONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+		CONFIG_SYSTEM_WORKQUEUE_ENABLE=0
 		CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
 		CONFIG_AVRTOS_BANNER_ENABLE=1
 		CONFIG_SERIAL_AUTO_INIT=1
