--- a/platformio.ini
+++ b/platformio.ini
@@ -343,10 +343,10 @@ build_flags =
 	-DCONFIG_KERNEL_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
-[env:DrvI2CCtrl]
+[env:DrvI2CTcn75]
 build_src_filter =
     ${env.build_src_filter}
-    +<examples/drv-i2c-ctrl>
+    +<examples/drv-i2c-tcn75>
 
 build_flags =
     ${env.build_flags}
@@ -354,13 +354,14 @@ build_flags =
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_KERNEL_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-	-DCONFIG_KERNEL_ASSERT=1
+	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
-	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
 	-DCONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
 	-DCONFIG_AVRTOS_BANNER_ENABLE=1
 	-DCONFIG_SERIAL_AUTO_INIT=1
+	-DCONFIG_KERNEL_UPTIME=1
 
 [env:DrvSpiMaster]
 build_src_filter =
