--- a/platformio.ini
+++ b/platformio.ini
@@ -836,6 +836,16 @@ build_flags =
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=1
 	-DCONFIG_KERNEL_ASSERT=1
 
+[env:PerfMsgq]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/perf-msgq>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
+	-DCONFIG_THREAD_CANARIES=1
+
 [env:PremptMultithreadingDemo]
 build_src_filter =
     ${env.build_src_filter}
