Introduce I2C configuration options to enable/disable device specifically
* Add CONFIG_I2C_DRIVER_ENABLE to disable I2C driver globally

--- a/examples/drv-i2c-tcn75/CMakeLists.txt
+++ b/examples/drv-i2c-tcn75/CMakeLists.txt
@@ -17,6 +17,8 @@ if (NOT QEMU AND ${FEATURE_USART_COUNT} GREATER 1)
 		CONFIG_AVRTOS_BANNER_ENABLE=1
 		CONFIG_SERIAL_AUTO_INIT=1
 		CONFIG_KERNEL_UPTIME=1
+
+		CONFIG_I2C_INTERRUPT_DRIVEN=1
 	)
 
 	target_link_avrtos(${PROJECT_NAME})
