Introduce Arduino MinimalExample
* Correct k_idle() documentation
* Fix piogen.py to reflect exact Arduino configurations
* Improve samples

--- a/platformio.ini
+++ b/platformio.ini
@@ -60,7 +60,7 @@ build_src_filter =
 
 build_flags =
 	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
-	-DCONFIG_KERNEL_AUTO_INIT=0
+	-DCONFIG_KERNEL_AUTO_INIT=1
 	-DCONFIG_KERNEL_TIMERS=1
 	-DCONFIG_KERNEL_EVENTS=1
 	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
@@ -95,7 +95,7 @@ build_src_filter =
 
 build_flags =
 	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
-	-DCONFIG_KERNEL_AUTO_INIT=0
+	-DCONFIG_KERNEL_AUTO_INIT=1
 	-DCONFIG_KERNEL_TIMERS=1
 	-DCONFIG_KERNEL_EVENTS=1
 	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
@@ -130,7 +130,7 @@ build_src_filter =
 
 build_flags =
 	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
-	-DCONFIG_KERNEL_AUTO_INIT=0
+	-DCONFIG_KERNEL_AUTO_INIT=1
 	-DCONFIG_KERNEL_TIMERS=1
 	-DCONFIG_KERNEL_EVENTS=1
 	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
@@ -165,7 +165,42 @@ build_src_filter =
 
 build_flags =
 	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
-	-DCONFIG_KERNEL_AUTO_INIT=0
+	-DCONFIG_KERNEL_AUTO_INIT=1
+	-DCONFIG_KERNEL_TIMERS=1
+	-DCONFIG_KERNEL_EVENTS=1
+	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
+	-DCONFIG_KERNEL_ATOMIC_API=1
+	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
+	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
+	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
+	-DCONFIG_KERNEL_DELAY_OBJECT_U32=1
+	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=96
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_THREAD_STACK_SENTINEL=0
+	-DCONFIG_KERNEL_ASSERT=0
+	-DCONFIG_KERNEL_ARGS_CHECKS=0
+	-DCONFIG_SERIAL_USART_BAUDRATE=9600lu
+	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000lu
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000lu
+
+monitor_speed = 9600
+
+[env:ArduinoPIOMinimalExample]
+platform = atmelavr
+framework = arduino
+
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/ArduinoPIOMinimalExample>
+
+build_flags =
+	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
+	-DCONFIG_KERNEL_AUTO_INIT=1
 	-DCONFIG_KERNEL_TIMERS=1
 	-DCONFIG_KERNEL_EVENTS=1
 	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
@@ -200,7 +235,7 @@ build_src_filter =
 
 build_flags =
 	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
-	-DCONFIG_KERNEL_AUTO_INIT=0
+	-DCONFIG_KERNEL_AUTO_INIT=1
 	-DCONFIG_KERNEL_TIMERS=1
 	-DCONFIG_KERNEL_EVENTS=1
 	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
