--- a/examples/drv-i2c-tcn75/CMakeLists.txt
+++ b/examples/drv-i2c-tcn75/CMakeLists.txt
@@ -19,6 +19,7 @@ if (NOT QEMU AND ${FEATURE_USART_COUNT} GREATER 1)
 		CONFIG_KERNEL_UPTIME=1
 
 		CONFIG_I2C_INTERRUPT_DRIVEN=1
+		CONFIG_I2C_DEBUG=0
 	)
 
 	target_link_avrtos(${PROJECT_NAME})
