Make I2C speed configurable on init
* Make I2C init more robust
* Define macros for common I2C frequencies

--- a/platformio.ini
+++ b/platformio.ini
@@ -398,6 +398,7 @@ build_flags =
 	-DCONFIG_SERIAL_AUTO_INIT=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_I2C_INTERRUPT_DRIVEN=1
+	-DCONFIG_I2C_DEBUG=0
 
 [env:DrvSpiMaster]
 build_src_filter =
@@ -903,6 +904,19 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 
+
+[env:Reentrancy]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/reentrancy>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+	-DCONFIG_KERNEL_API_NOINLINE=1
+	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
+	-DCONFIG_KERNEL_REENTRANCY=1
 
 [env:Ring]
 build_src_filter =
