Introduce thread stack monitoring, improve sentinels
* Rename CONFIG_KERNEL_SILENT_FAULTS to CONFIG_KERNEL_SILENT_FAULTS
* Rename K_FAULT to K_FAULT_ANY
* Introduce CONFIG_THREAD_MONITOR and CONFIG_THREAD_MAIN_MONITOR
* Introduce __packed
* Document TIMER16_Device

--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=avrtos
 version=1.2.0
 author=Lucas Dietrich
 maintainer=Lucas Dietrich
-sentence=RTOS for AVR Arduino microcontrollers (Uno Mega)
-paragraph=AVRTOS is a real-time operating system designed for 8-bit AVR-based Arduino microcontrollers. The library supports multithreading (cooperative and preemptive), a simple scheduler (no priority), mutexes, semaphores, events, timers, flags, workqueues, FIFO queues, and drivers for GPIO, UART, and EXTI/PCI interrupts. It is highly configurable and has been tested on ATmega328P (Arduino UNO/PRO) and ATmega2560 (Arduino MEGA) platforms. The API style is similar to that of the Zephyr RTOS.
+sentence=RTOS for AVR Arduino microcontrollers (Uno & Mega)
+paragraph=AVRTOS is a real-time operating system designed for 8-bit AVR-based Arduino microcontrollers. The library supports multithreading (cooperative and preemptive), a simple scheduler (no priority), mutexes, semaphores, events, timers, flags, workqueues, FIFO queues, and drivers for GPIO, UART, EXTI/PCI interrupts, SPI and I2C. It is highly configurable and has been tested on ATmega328P (Arduino UNO/PRO) and ATmega2560 (Arduino MEGA) platforms. The API style is similar to that of the Zephyr RTOS.
 category=Timing
 dot_a_linkage=false
 url=https://github.com/lucasdietrich/AVRTOS
