--- a/platformio.ini
+++ b/platformio.ini
@@ -341,7 +341,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_KERNEL_UPTIME=1
-	-DCONFIG_KERNEL_SILENT_FAULTS=1
+	-DCONFIG_KERNEL_FAULT_VERBOSITY=0
 
 [env:DrvApiTimers]
 build_src_filter =
@@ -599,13 +599,13 @@ build_flags =
 [env:FaultHook]
 build_src_filter =
     ${env.build_src_filter}
-    +<examples/fault_hook>
+    +<examples/fault-hook>
 
 build_flags =
     ${env.build_flags}
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_KERNEL_UPTIME=1
-	-DCONFIG_KERNEL_SILENT_FAULTS=0
+	-DCONFIG_KERNEL_FAULT_VERBOSITY=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=-1
 
 [env:Fifo]
@@ -666,7 +666,7 @@ build_flags =
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
-	-DCONFIG_KERNEL_SILENT_FAULTS=1
+	-DCONFIG_KERNEL_FAULT_VERBOSITY=0
 
 [env:Idle]
 build_src_filter =
@@ -1025,9 +1025,14 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
-	-DCONFIG_THREAD_STACK_SENTINEL=1
 	-DCONFIG_THREAD_STACK_CANARY=1
 	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_THREAD_STACK_SENTINEL=1
+	-DCONFIG_THREAD_STACK_SENTINEL_SIZE=1
+	-DCONFIG_THREAD_MAIN_MONITOR=1
+	-DCONFIG_KERNEL_FAULT_VERBOSITY=2
+	-DCONFIG_THREAD_MONITOR=1
+	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:Sysclock]
 build_src_filter =
