--- a/examples/stack-sentinel/CMakeLists.txt
+++ b/examples/stack-sentinel/CMakeLists.txt
@@ -6,9 +6,17 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_UPTIME=1
 
 	CONFIG_STDIO_PRINTF_TO_USART=0
-	CONFIG_THREAD_STACK_SENTINEL=1
+
 	CONFIG_THREAD_STACK_CANARY=1
 	CONFIG_THREAD_CANARIES=1
+	
+	CONFIG_THREAD_STACK_SENTINEL=1
+	CONFIG_THREAD_STACK_SENTINEL_SIZE=1
+	CONFIG_THREAD_MAIN_MONITOR=1
+	CONFIG_KERNEL_FAULT_VERBOSITY=2
+	CONFIG_THREAD_MONITOR=1
+
+	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 )
 
 target_link_avrtos(${PROJECT_NAME})
