--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,7 @@
 		"xqueue.h": "c",
 		"mutex.h": "c",
 		"pgmspace.h": "c",
-		"io.h": "c",
+		"stdio.h": "c",
 		"interrupt.h": "c",
 		"kernel.h": "c",
 		"defines.h": "c",
@@ -43,7 +43,7 @@
 		"cpufunc.h": "c",
 		"stdint.h": "c",
 		"avrtos_conf.h": "c",
-		"time.h": "c",
+		"systime.h": "c",
 		"event.h": "c",
 		"atomic.h": "c",
 		"timer.h": "c",
