Add warning if no sample is selected

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,9 @@ set(examples_dir ${CMAKE_CURRENT_LIST_DIR})
 
 file(GLOB samples RELATIVE ${examples_dir} ${examples_dir}/*)
 
+# local variable EXAMPLE_FOUND
+set(EXAMPLE_FOUND FALSE)
+
 foreach(example ${samples})
 	if(IS_DIRECTORY ${examples_dir}/${example} )
 		# Allow to build only a single sample to not lost VS Code Intellisense with defines
@@ -11,7 +14,12 @@ foreach(example ${samples})
 			if(EXISTS "${examples_dir}/${example}/CMakeLists.txt")
 				message(${examples_dir}/${example})
 				add_subdirectory(${examples_dir}/${example})
+				set(EXAMPLE_FOUND TRUE)
 			endif()
 		endif()
 	endif()
 endforeach()
+
+if(NOT EXAMPLE_FOUND)
+	message(WARNING "Example \"${ENABLE_SINGLE_SAMPLE}\" not found, nothing to build")
+endif()
