mcp2515: Finalize doc + fix compilation

--- a/platformio.ini
+++ b/platformio.ini
@@ -450,6 +450,21 @@ build_flags =
 	-DCONFIG_I2C_INTERRUPT_DRIVEN=1
 	-DCONFIG_I2C_DEBUG=0
 
+[env:DrvSpiCanMcp2515]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/drv-spi-can-mcp2515>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_THREAD_CANARIES=1
+
 [env:DrvSpiMaster]
 build_src_filter =
     ${env.build_src_filter}
