Rename following macros:
- CONFIG_KERNEL_DEBUG
- CONFIG_KERNEL_TIME_SLICE_TICKS
- K_EVENTS_PERIOD_TICKS
- K_TIMERS_PERIOD_TICKS

--- a/examples/sched-lock/CMakeLists.txt
+++ b/examples/sched-lock/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_COOPERATIVE_THREADS=1
 	CONFIG_KERNEL_TIME_SLICE_US=5000
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_API_NOINLINE=1
 
