--- a/examples/blinking-led/CMakeLists.txt
+++ b/examples/blinking-led/CMakeLists.txt
@@ -8,7 +8,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	CONFIG_KERNEL_TIME_SLICE_US=1000
 	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_THREAD_IDLE=1
 	CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0
