--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -7,7 +7,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	CONFIG_KERNEL_TIME_SLICE_US=50000
 	CONFIG_KERNEL_ASSERT=1
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 )
