--- a/examples/drv-i2c-tcn75/CMakeLists.txt
+++ b/examples/drv-i2c-tcn75/CMakeLists.txt
@@ -7,7 +7,7 @@ if (NOT QEMU AND ${FEATURE_USART_COUNT} GREATER 1)
 	target_compile_definitions(${PROJECT_NAME} PUBLIC
 		CONFIG_THREAD_MAIN_STACK_SIZE=0x200
 		CONFIG_THREAD_CANARIES=1
-		CONFIG_KERNEL_DEBUG=0
+		CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 		CONFIG_KERNEL_SCHEDULER_DEBUG=0
 		CONFIG_KERNEL_ASSERT=0
 		CONFIG_STDIO_PRINTF_TO_USART=0
