--- a/examples/drv-timers-ctc-toggle/CMakeLists.txt
+++ b/examples/drv-timers-ctc-toggle/CMakeLists.txt
@@ -22,7 +22,7 @@ if (${FEATURE_TIMER_COUNT} GREATER 3)
 
 		CONFIG_KERNEL_ASSERT=0
 
-		CONFIG_KERNEL_DEBUG=0
+		CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 		CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	)
 
