--- a/examples/drv-timers/CMakeLists.txt
+++ b/examples/drv-timers/CMakeLists.txt
@@ -21,7 +21,7 @@ if (NOT QEMU)
 		CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 		CONFIG_KERNEL_DELAY_OBJECT_U32=1
 		CONFIG_KERNEL_SCHEDULER_DEBUG=0
-		CONFIG_KERNEL_DEBUG=0
+		CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	)
 
 	target_link_avrtos(${PROJECT_NAME})
