--- a/examples/drv-usart-async/CMakeLists.txt
+++ b/examples/drv-usart-async/CMakeLists.txt
@@ -8,7 +8,7 @@ if (NOT QEMU AND ${FEATURE_USART_COUNT} GREATER 1)
 		CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 		CONFIG_THREAD_MAIN_STACK_SIZE=0x100
 		CONFIG_THREAD_CANARIES=1
-		CONFIG_KERNEL_DEBUG=0
+		CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 		CONFIG_KERNEL_SCHEDULER_DEBUG=0
 		CONFIG_KERNEL_ASSERT=1
 		CONFIG_STDIO_PRINTF_TO_USART=0
