--- a/examples/fifo-slab/CMakeLists.txt
+++ b/examples/fifo-slab/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	CONFIG_KERNEL_TIME_SLICE_US=4000
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_ASSERT=0
 
