--- a/examples/fifo/CMakeLists.txt
+++ b/examples/fifo/CMakeLists.txt
@@ -8,7 +8,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	# CONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
 	# CONFIG_KERNEL_TIME_SLICE_US=100000
 
-	# CONFIG_KERNEL_DEBUG=1
+	# CONFIG_KERNEL_SYSCLOCK_DEBUG=1
 	# CONFIG_KERNEL_SCHEDULER_DEBUG=1
 )
 
