--- a/examples/footprint/CMakeLists.txt
+++ b/examples/footprint/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_ASSERT=0
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_THREAD_IDLE=0
 
 	# CONFIG_AVRTOS_LINKER_SCRIPT=0
