--- a/examples/idle/CMakeLists.txt
+++ b/examples/idle/CMakeLists.txt
@@ -10,7 +10,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 
 	CONFIG_KERNEL_UPTIME=0
 
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 	CONFIG_KERNEL_ASSERT=1
