--- a/examples/isr-unpend/CMakeLists.txt
+++ b/examples/isr-unpend/CMakeLists.txt
@@ -5,7 +5,7 @@ if (${FEATURE_TIMER_COUNT} GREATER 3)
 
 	# AVRTOS Configuration
 	target_compile_definitions(${PROJECT_NAME} PUBLIC
-		CONFIG_KERNEL_DEBUG=0
+		CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 		CONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 		CONFIG_INTERRUPT_POLICY=1
