--- a/examples/logging/CMakeLists.txt
+++ b/examples/logging/CMakeLists.txt
@@ -16,7 +16,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_LOGGING_SUBSYSTEM=1
 
 	CONFIG_KERNEL_ASSERT=0
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 )
 
 target_link_avrtos(${PROJECT_NAME})
