--- a/examples/main-stack/CMakeLists.txt
+++ b/examples/main-stack/CMakeLists.txt
@@ -18,7 +18,7 @@ if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 
 		CONFIG_KERNEL_ASSERT=0
 
-		CONFIG_KERNEL_DEBUG=0
+		CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 		CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	)
 
