--- a/examples/mem_slab/CMakeLists.txt
+++ b/examples/mem_slab/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(${PROJECT_NAME} main.c)
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_ASSERT=1
 	CONFIG_THREAD_MAIN_STACK_SIZE=0x80
