--- a/examples/minimal-example/CMakeLists.txt
+++ b/examples/minimal-example/CMakeLists.txt
@@ -15,7 +15,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 
 	CONFIG_KERNEL_UPTIME=1
 
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 )
 
