--- a/examples/mutex-multithreading-demo/CMakeLists.txt
+++ b/examples/mutex-multithreading-demo/CMakeLists.txt
@@ -6,7 +6,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_COOPERATIVE_THREADS=1
 	CONFIG_THREAD_MAIN_COOPERATIVE=0
 	CONFIG_KERNEL_TIME_SLICE_US=16000
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_THREAD_IDLE=0
 	CONFIG_KERNEL_ASSERT=1
