--- a/examples/object-reservation/CMakeLists.txt
+++ b/examples/object-reservation/CMakeLists.txt
@@ -7,7 +7,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000000
 	CONFIG_KERNEL_TIME_SLICE_US=1000000
 	CONFIG_KERNEL_UPTIME=0
-	CONFIG_KERNEL_DEBUG=1
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=1
 	CONFIG_KERNEL_SCHEDULER_DEBUG=1
 	CONFIG_KERNEL_ASSERT=1
 
