--- a/examples/reentrancy/CMakeLists.txt
+++ b/examples/reentrancy/CMakeLists.txt
@@ -3,7 +3,7 @@ add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_API_NOINLINE=1
 	CONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
