--- a/examples/shell/CMakeLists.txt
+++ b/examples/shell/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	CONFIG_THREAD_MAIN_STACK_SIZE=0x100
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_ASSERT=1
 	CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
