Remove not mature tickless sample + format + mark qemu as required

--- a/platformio.ini
+++ b/platformio.ini
@@ -331,7 +331,7 @@ build_flags =
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_THREAD_IDLE=1
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0
@@ -368,7 +368,7 @@ build_flags =
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=50000
 	-DCONFIG_KERNEL_ASSERT=1
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:DataStructures]
@@ -415,7 +415,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:DrvGpio]
@@ -425,7 +425,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:DrvI2CTcn75]
@@ -437,7 +437,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=0x200
 	-DCONFIG_THREAD_CANARIES=1
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
@@ -473,7 +473,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
@@ -490,7 +490,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
@@ -505,7 +505,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
@@ -547,7 +547,7 @@ build_flags =
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_DELAY_OBJECT_U32=1
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 
 [env:DrvTimersCtcToggle]
 build_src_filter =
@@ -567,7 +567,7 @@ build_flags =
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:DrvTimersPwm]
@@ -588,7 +588,7 @@ build_flags =
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:DrvTimersPwmIcrn]
@@ -609,7 +609,7 @@ build_flags =
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:DrvUsart]
@@ -632,7 +632,7 @@ build_flags =
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
 	-DCONFIG_THREAD_CANARIES=1
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_ASSERT=1
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
@@ -657,7 +657,7 @@ build_flags =
 	-DCONFIG_KERNEL_EVENTS=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_THREAD_STACK_SENTINEL=1
 	-DCONFIG_KERNEL_API_NOINLINE=1
@@ -692,7 +692,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=4000
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_ASSERT=0
 
@@ -713,7 +713,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:Footprint]
@@ -724,7 +724,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_THREAD_IDLE=0
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
 	-DCONFIG_STDIO_PRINTF_TO_USART=-1
@@ -757,7 +757,7 @@ build_flags =
 	-DCONFIG_KERNEL_TIME_SLICE_US=10000
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_KERNEL_UPTIME=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_ASSERT=1
 	-DCONFIG_KERNEL_THREAD_IDLE=0
@@ -771,7 +771,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=16000
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_KERNEL_API_NOINLINE=0
@@ -783,7 +783,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=400000
@@ -808,7 +808,7 @@ build_flags =
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_LOGGING_SUBSYSTEM=1
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 
 [env:MainStack]
 build_src_filter =
@@ -826,7 +826,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=1024
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:ManyThreads]
@@ -844,7 +844,7 @@ build_flags =
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
-	-DCONFIG_KERNEL_DEBUG=1
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=1
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_THREAD_STACK_SENTINEL=1
@@ -858,7 +858,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_ASSERT=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=0x80
@@ -881,7 +881,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_KERNEL_UPTIME=1
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:Msgq]
@@ -893,7 +893,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_CANARIES=1
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_ASSERT=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=0x64
@@ -917,7 +917,7 @@ build_flags =
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=1
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=0
 	-DCONFIG_KERNEL_TIME_SLICE_US=16000
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_THREAD_IDLE=0
 	-DCONFIG_KERNEL_ASSERT=1
@@ -931,7 +931,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=16000
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:ObjectReservation]
@@ -945,7 +945,7 @@ build_flags =
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000000
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000000
 	-DCONFIG_KERNEL_UPTIME=0
-	-DCONFIG_KERNEL_DEBUG=1
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=1
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=1
 	-DCONFIG_KERNEL_ASSERT=1
 
@@ -968,7 +968,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=250000
-	-DCONFIG_KERNEL_DEBUG=1
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=1
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_DEBUG_PREEMPT_UART=1
 
@@ -988,7 +988,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_API_NOINLINE=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
@@ -1013,7 +1013,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=0
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=1
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=1
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:RingDemo]
@@ -1035,7 +1035,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=0
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:Rt]
@@ -1045,7 +1045,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_INTERRUPT_POLICY=0
 	-DCONFIG_THREAD_DEFAULT_SREG=0
@@ -1059,7 +1059,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=5000
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_API_NOINLINE=1
 
@@ -1072,7 +1072,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=16000
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:Shell]
@@ -1084,7 +1084,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_ASSERT=1
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
@@ -1100,7 +1100,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=200000
@@ -1135,7 +1135,7 @@ build_flags =
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=250000
 	-DCONFIG_KERNEL_TIME_SLICE_US=250000
 	-DCONFIG_KERNEL_UPTIME=0
-	-DCONFIG_KERNEL_DEBUG=1
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=1
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:SystemWorkqueue]
@@ -1146,7 +1146,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
 	-DCONFIG_KERNEL_API_NOINLINE=0
@@ -1229,7 +1229,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_ASSERT=1
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
 	-DCONFIG_KERNEL_UPTIME=1
@@ -1276,7 +1276,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 [env:ZephyrDevUsartTool]
@@ -1289,7 +1289,7 @@ build_flags =
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
 	-DCONFIG_THREAD_CANARIES=1
-	-DCONFIG_KERNEL_DEBUG=0
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
