--- a/platformio.ini
+++ b/platformio.ini
@@ -458,6 +458,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_DEVICE_MCP2515=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
