--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,9 @@
     // See http://go.microsoft.com/fwlink/?LinkId=827846
     // for the documentation about the extensions.json format
     "recommendations": [
-        "platformio.platformio-ide"
+        "ms-vscode.cpptools",
+        "platformio.platformio-ide",
+        "xaver.clang-format"
     ],
     "unwantedRecommendations": [
         "ms-vscode.cpptools-extension-pack"
