Upgrade rust and LLVM to fix rjmp bug
* Upgrade avr-atmega2560 target from avr-hal

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,10 +1,4 @@
 [toolchain]
-channel = "nightly"
-
-# doesn't work on my side
-# channel = "nightly-2024-03-22"
-
+channel = "nightly-2025-02-13"
 components = ["rust-src", "rustfmt", "clippy"]
-profile = "default"
-# profile = "minimal"
-# targets = ["avr"]
+profile = "minimal"
