--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,75 +5,7 @@
 		"CMAKE_GENERATOR": "Unix Makefiles",
 		"CMAKE_TOOLCHAIN_FILE": "${workspaceFolder}/cmake/avr6-atmega2560.cmake",
 	},
+	"python.defaultInterpreterPath": ".venv/bin/python",
 	"editor.tabSize": 4,
-	"editor.rulers": [80],
-	"files.associations": {
-		"*.jinja": "python",
-		"*.asm": "avr",
-		"*.bb": "shellscript",
-		"*.bbclass": "shellscript",
-		"*.inc": "shellscript",
-		"multithreading_debug.h": "c",
-		"serial.h": "c",
-		"multithreading_defines.h": "c",
-		"schedules_items.h": "c",
-		"xqueue.h": "c",
-		"mutex.h": "c",
-		"pgmspace.h": "c",
-		"stdio.h": "c",
-		"interrupt.h": "c",
-		"kernel.h": "c",
-		"defines.h": "c",
-		"sys.h": "c",
-		"debug.h": "c",
-		"fifo.h": "c",
-		"assert.h": "c",
-		"idle.h": "c",
-		"canaries.h": "c",
-		"queue.h": "c",
-		"workqueue.h": "c",
-		"dlist.h": "c",
-		"stddef.h": "c",
-		"mem_slab.h": "c",
-		"avrtos.h": "c",
-		"tqueue.h": "c",
-		"slist.h": "c",
-		"led.h": "c",
-		"delay.h": "c",
-		"cpufunc.h": "c",
-		"stdint.h": "c",
-		"avrtos_conf.h": "c",
-		"systime.h": "c",
-		"event.h": "c",
-		"atomic.h": "c",
-		"timer.h": "c",
-		"stack_sentinel.h": "c",
-		"fault.h": "c",
-		"iom328p.h": "c",
-		"stdbool.h": "c",
-		"usart.h": "c",
-		"semaphore.h": "c",
-		"kernel_private.h": "c",
-		"drivers.h": "c",
-		"gpio.h": "c",
-		"flags.h": "c",
-		"logging.h": "c",
-		"iom2560.h": "c",
-		"iomxx0_1.h": "c",
-		"typeinfo": "c",
-		"exti.h": "c",
-		"spi.h": "c",
-		"sleep.h": "c",
-		"cmath": "c",
-		"types.h": "c",
-		"errno.h": "c",
-		"init.h": "c",
-		"ring.h": "c",
-		"string.h": "c",
-		"crc16.h": "c",
-		"delay_basic.h": "c",
-		"twi.h": "c",
-		"i2c.h": "c",
-		"i2c_defs.h": "c"
-	},
+	"editor.rulers": [80]
 }
